--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -16,11 +16,13 @@ footer {
   margin: 0 auto;
 }
 
-.footer_logo h1 {
-  font-size: 1.5rem;
-  color: var(--off-white);
-  font-family: "Kaushan Script", cursive;
-  font-weight: 400;
+.footer_logo {
+  height: 40px;
+
+}
+
+.footer_logo img {
+height: 100%
 }
 
 .footer_copyright {
