--- a/src/components/Hero/hero.css
+++ b/src/components/Hero/hero.css
@@ -1,18 +1,18 @@
 .hero {
   position: relative;
   width: 100%;
-  height: 100%;
-  overflow: hidden;
+  height: 90vh;
+  overflow: hidden;  
+  scroll-margin-top: 10vh;
 }
 
 .hero_main {
   width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 3rem;
+  gap: 2rem;
   padding: 5vh 2rem;
 }
 
@@ -20,9 +20,17 @@
   text-align: center;
   display: flex;
   flex-direction: column;
-  font-size: 4rem;
+  font-size: 3.5rem;
   line-height: 4.5rem;
   font-weight: bold;
+}
+
+.hero_title .logo_name{
+  height: 64px;
+}
+
+.hero_title .logo_name img{
+  height: 100%;
 }
 
 .hero_main .hero_title .shape {
